--- a/caliper-benchmarks-ben/.gitignore
+++ b/caliper-benchmarks-ben/.gitignore
@@ -14,6 +14,6 @@ launch.json
 # No npm runtime artifacts
 node_modules/*
 package-lock.json
-package.json
+# package.json
 
 src/fabric/samples/fabcar/java
