--- a/caliper-benchmarks-ben/networks/fabric/fabric-v1.4.1/swarm-3org1peer-raft/docker-swarm-compose-tls.yaml
+++ b/caliper-benchmarks-ben/networks/fabric/fabric-v1.4.1/swarm-3org1peer-raft/docker-swarm-compose-tls.yaml
@@ -41,7 +41,7 @@ services:
         - 7054:7054
         command: sh -c 'fabric-ca-server start -b admin:adminpw -d'
         volumes:
-        - backup-ca1:/etc/hyperledger/fabric-ca-server
+#        - backup-ca1:/etc/hyperledger/fabric-ca-server
         - ./config/crypto-config/peerOrganizations/org1.example.com/ca/:/etc/hyperledger/fabric-ca-server-config
         - ./config/crypto-config/peerOrganizations/org1.example.com/tlsca/:/etc/hyperledger/fabric-ca-server-tls
         deploy:
@@ -67,7 +67,7 @@ services:
         - 8054:7054
         command: sh -c 'fabric-ca-server start -b admin:adminpw -d'
         volumes:
-        - backup-ca2:/etc/hyperledger/fabric-ca-server
+#        - backup-ca2:/etc/hyperledger/fabric-ca-server
         - ./config/crypto-config/peerOrganizations/org2.example.com/ca/:/etc/hyperledger/fabric-ca-server-config
         - ./config/crypto-config/peerOrganizations/org2.example.com/tlsca/:/etc/hyperledger/fabric-ca-server-tls
         deploy:
@@ -93,7 +93,7 @@ services:
         - 9054:7054
         command: sh -c 'fabric-ca-server start -b admin:adminpw -d'
         volumes:
-        - backup-ca3:/etc/hyperledger/fabric-ca-server
+ #       - backup-ca3:/etc/hyperledger/fabric-ca-server
         - ./config/crypto-config/peerOrganizations/org3.example.com/ca/:/etc/hyperledger/fabric-ca-server-config
         - ./config/crypto-config/peerOrganizations/org3.example.com/tlsca/:/etc/hyperledger/fabric-ca-server-tls
         deploy:
@@ -131,7 +131,7 @@ services:
         ports:
         - 7050:7050
         volumes:
-        - backup-orderer0:/var/hyperledger/production
+ #       - backup-orderer0:/var/hyperledger/production
         - ./config/:/etc/hyperledger/configtx
         - ./config/crypto-config/ordererOrganizations/example.com/orderers/orderer0.example.com/:/etc/hyperledger/msp/orderer
         deploy:
@@ -166,7 +166,7 @@ services:
         ports:
         - 8050:7050
         volumes:
-        - backup-orderer1:/var/hyperledger/production
+ #       - backup-orderer1:/var/hyperledger/production
         - ./config/:/etc/hyperledger/configtx
         - ./config/crypto-config/ordererOrganizations/example.com/orderers/orderer1.example.com/:/etc/hyperledger/msp/orderer
         deploy:
@@ -200,7 +200,7 @@ services:
         ports:
         - 9050:7050
         volumes:
-        - backup-orderer2:/var/hyperledger/production
+#        - backup-orderer2:/var/hyperledger/production
         - ./config/:/etc/hyperledger/configtx
         - ./config/crypto-config/ordererOrganizations/example.com/orderers/orderer2.example.com/:/etc/hyperledger/msp/orderer
         deploy:
@@ -246,7 +246,7 @@ services:
         - 7051:7051
         volumes:
         - /var/run/:/host/var/run/
-        - backup-peer0org1:/var/hyperledger/production
+#        - backup-peer0org1:/var/hyperledger/production
         - ./config/crypto-config/peerOrganizations/org1.example.com/peers/peer0.org1.example.com/:/etc/hyperledger/msp/peer
         deploy:
             placement:
@@ -287,7 +287,7 @@ services:
         - 8051:7051
         volumes:
         - /var/run/:/host/var/run/
-        - backup-peer0org2:/var/hyperledger/production
+ #       - backup-peer0org2:/var/hyperledger/production
         - ./config/crypto-config/peerOrganizations/org2.example.com/peers/peer0.org2.example.com/:/etc/hyperledger/msp/peer
         deploy:
             placement:
@@ -328,19 +328,19 @@ services:
         - 9051:7051
         volumes:
         - /var/run/:/host/var/run/
-        - backup-peer0org3:/var/hyperledger/production
+#        - backup-peer0org3:/var/hyperledger/production
         - ./config/crypto-config/peerOrganizations/org3.example.com/peers/peer0.org3.example.com/:/etc/hyperledger/msp/peer
         deploy:
             placement:
                 constraints: [node.hostname == Node2]
 
-volumes:
-  backup-ca1:
-  backup-ca2:
-  backup-ca3:
-  backup-orderer0:
-  backup-orderer1:
-  backup-orderer2:
-  backup-peer0org1:
-  backup-peer0org2:
-  backup-peer0org3:
+#volumes:
+#  backup-ca1:
+#  backup-ca2:
+#  backup-ca3:
+#  backup-orderer0:
+#  backup-orderer1:
+#  backup-orderer2:
+#  backup-peer0org1:
+#  backup-peer0org2:
+#  backup-peer0org3:
