--- a/monitor/prometheus.yml
+++ b/monitor/prometheus.yml
@@ -43,10 +43,10 @@ scrape_configs:
 
     - job_name: hyperledger_orderer
       static_configs:
-      - targets: ['orderer0_example_com:8443', 'orderer1_example_com:8443', 'orderer2_example_com:8443', 'orderer3_example_com:8443']
+      - targets: ['orderer0_example_com:8443', 'orderer1_example_com:8443', 'orderer2_example_com:8443']
     
     - job_name: hyperledger_peer
       static_configs:
-      - targets: ['peer0_org1_example_com:9443', 'peer0_org2_example_com:9443', 'peer0_org3_example_com:9443', 'peer0_org4_example_com:9443']
+      - targets: ['peer0_org1_example_com:9443', 'peer0_org2_example_com:9443', 'peer0_org3_example_com:9443']
 
 
