--- a/monitor/swarm-compose.yaml
+++ b/monitor/swarm-compose.yaml
@@ -44,7 +44,7 @@ services:
     - /var/lib/docker:/var/lib/docker:ro
     deploy:
       placement:
-        constraints: [node.hostname == dappvm1]
+        constraints: [node.hostname == Node0]
     #ports:
     #- 8080:8080
     networks:
@@ -86,7 +86,7 @@ services:
     - /:/rootfs:ro
     deploy:
       placement:
-        constraints: [node.hostname == dappvm1]
+        constraints: [node.hostname == Node0]
     #ports:
     #- 9100:9100
     networks:
